tools/ncp-local-cluster/apps/nginx/httproute.yaml
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - name: shared-gw
    namespace: envoy-gateway-system
  hostnames:
  - "nginx.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 80
      namespace: sample
